# tests-sei

./: .env.example  .gitignore  README.md  acessar_processos_sei.py  controle_pagina_1.html  gerar_pdf_form.html  listar_unidades.csv  login.html  main.py  numero_processos_nao_visuzalidados.py  processo_iframe.html  processo_pdf_intermediario.html  processo_primeiro.html  processos_processoNaoVisualizado.csv  pyproject.toml  unidades_sei.py
docs/: architecture.md
src/sei_client/: __init__.py  auth.py  cli.py  client.py  config.py  documents.py  dom.py  exceptions.py  http.py  models.py  options.py  pdf.py  processes.py  storage.py
tests/: __init__.py  test_document_parser.py  test_pdf_download.py
