[project]
name = "tests-api-sei"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "logging>=0.4.9.6",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "typing>=3.10.0.0",
    "zeep>=4.3.2",
]

[tool.pyright]
reportUnknownMemberType = false
reportUnknownArgumentType = false
