[project]
name = "tests-api-sei"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "logging>=0.4.9.6",
    "lxml>=6.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "typing>=3.10.0.0",
    "zeep>=4.3.2",
    "openpyxl>=3.1.2",
]

[project.scripts]
sei-client = "sei_client.cli:main"

[tool.uv]
package = true

[tool.pyright]
reportUnknownMemberType = false
reportUnknownArgumentType = false

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
